@@ -1,3 +1,13 @@
+2017-02-11  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Source/GSICUString.m (UTextNSStringAccess,
+	UTextInitWithNSMutableString, UTextInitWithNSString):
+	Fix a serious misunderstanding of the icu string access API: The
+	value of nativeIndexingLimit must not exceed the length of the
+	current chunk. Otherwise icu library macros could miss to properly
+	reinitialize chunks, which, for instance, could lead to returning
+	regular expression matches outside the selected range.
+
 2017-01-06  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Tools/gdomap.c: Use getaddrinfo rather than gethostbyname if 
